valid_tests/arrays/test3.go
// Test 3: Multidimensional arrays
func main() {
    matrix := [][]int{{1, 2}, {3, 4}, {5, 6}}
    element := matrix[1][0]
    matrix[0][1] = 99
}
