invalid_tests/arrays/test4.go
// Test 4: Unmatched brackets in array access
func main() {
    arr := []int{1, 2, 3}
    x := arr[0
}
